<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeneratorMDP</string>
    <string name="title_activity_main">MDP</string>
    <string name="action_settings">Options</string>
    <string name="action_modify">Modifier</string>
    <string name="action_add">Ajouter</string>
    <string name="action_account">Compte</string>
    <string name="title_activity_mdpdetails">MDPDetailsActivity</string>
    <string name="title_activity_add_mdp">AddMDPActivity</string>
    <string name="textview_size">Taille :</string>
    <string name="textview_numeric">Numérique</string>
    <string name="textview_majuscule">Majuscule</string>
    <string name="textview_minuscule">Minuscule</string>
    <string name="edittext_application">Application</string>
    <string name="edittext_description">Description de l\'application</string>
    <string name="textview_special">Caractères spéciaux</string>
    <string name="textview_date_modif">Dernière Modificaiton:</string>
    <string name="button_delete">Supprimer</string>
    <string name="button_validate">Valider</string>
    <string name="button_modify">Modifier</string>
    <string name="button_cancel">Annuler</string>
    <string name="application_prompt">Application</string>
    <string name="title_activity_modify_mdp">ModifyMDPActivity</string>
    <!-- Settings -->
    <string name="pref_title_generale">Générale</string>
    <string name="pref_title_notification">Notifications</string>
    <string name="pref_title_language">Langues</string>
    <string name="pref_title_propos">À propos</string>
    <string name="pref_title_auteur">Auteur</string>
    <string name="pref_title_import">Importer</string>
    <string name="pref_title_export">Exporter</string>
    <string name="pref_title_import_export">Importer/Exporter</string>
    <string name="pref_date_limit">Limit expiration</string>
    <string name="pref_date_limit_dialog">Temps d\'expiration</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_changemdp">Activation Limite</string>
    <string name="pref_title_note">Note</string>
    <string name="pref_summary_notification">Recevez des infos dans la barre d\'état</string>
    <string name="pref_summary_language">Choisissez votre langue</string>
    <string name="pref_summary_version">1.0.0</string>
    <string name="pref_summary_auteur">Bertrand Lafage développeur indépendant</string>
    <string name="pref_summary_export">Permet d\'exporter les préférences dans un fichier pour les sauvegarder</string>
    <string name="pref_summary_changemdp">Permet d\'activer la limite de temps par défaut</string>

    <string-array name="dateLimits">
        <item name="1">15 Jours</item>
        <item name="2">30 Jours</item>
        <item name="3">45 Jours</item>
        <item name="4">60 Jours</item>
        <item name="5">75 Jours</item>
        <item name="6">90 Jours</item>
    </string-array>
    <string-array name="dateLimitValues">
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
    </string-array>
    <string-array name="languages">
        <item name="1">Par défaut</item>
        <item name="2">English</item>
        <item name="3">Francais</item>
        <item name="4">Español</item>
    </string-array>
    <string-array name="languageValues">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
    </string-array>


    <array name="letter_tile_colors">
        <item>#d06b64</item>
        <item>#ac725e</item>
        <item>#f83a22</item>
        <item>#ff7537</item>
        <item>#ffad46</item>
        <item>#42d692</item>
        <item>#16a765</item>
        <item>#7bd148</item>
        <item>#b3dc6c</item>
        <item>#fbe983</item>
        <item>#fad165</item>
        <item>#92e1c0</item>
        <item>#9fe1e7</item>
        <item>#9fc6e7</item>
        <item>#4986e7</item>
        <item>#9a9cff</item>
        <item>#b99aff</item>
        <item>#cabdbf</item>
        <item>#cca6ac</item>
        <item>#f691b2</item>
        <item>#cd74e6</item>
        <item>#a47ae2</item>
    </array>

    <string name="title_activity_login">Identification</string>
    <string name="title_activity_createuser">Inscription</string>

    <string name="edittext_username">Pseudo</string>
    <string name="edittext_email">Email</string>
    <string name="edittext_password">Mot de passe</string>
    <string name="edittext_confirm_password">Confirme mot de passe</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Valider</string>

    <string name="error_invalid_password">4 caractères et au moins un nombre</string>
    <string name="error_invalid_nickname">Trop court</string>
    <string name="error_invalid_email">Invalide</string>
    <string name="error_invalid_confirm_email">Non identique</string>
    <string name="error_required">Requis</string>
</resources>
