<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="fr.beber.generatormdp.MDPDetailsActivity">
    <item android:id="@+id/action_delete"
          android:title="@string/button_delete"
          android:orderInCategory="100"
          android:icon="@drawable/ic_action_remove"
          android:showAsAction="always"/>
    <item android:id="@+id/action_account"
          android:title="@string/action_account"
          android:icon="@drawable/ic_action_accounts"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:orderInCategory="100"
          android:showAsAction="never"/>
</menu>
