<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/linear_padding_addactivity"
                android:paddingRight="@dimen/linear_padding_addactivity"
                android:paddingTop="@dimen/linear_padding_addactivity"
                android:paddingBottom="@dimen/linear_padding_addactivity"
                tools:context="fr.beber.generatormdp.AddMDPActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/application_prompt"
                android:id="@+id/spinApplication"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="32"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/seekBarTV"/>

            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="4"
                    android:id="@+id/seekBarsize"/>
        </LinearLayout>


        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_numeric"
                android:id="@+id/checkBoxNumerique"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_minuscule"
                android:checked="true"
                android:id="@+id/checkBoxMinuscule"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_majuscule"
                android:id="@+id/checkBoxMajuscule"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_special"
                android:id="@+id/checkBoSpec"/>

    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_validate"
            android:id="@+id/BTValidate"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
