<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/linear_padding_addactivity"
                android:paddingRight="@dimen/linear_padding_addactivity"
                android:paddingTop="@dimen/linear_padding_addactivity"
                android:paddingBottom="@dimen/linear_padding_addactivity"
                tools:context="fr.beber.generatormdp.AddMDPActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Mot de passe"
                android:id="@+id/passwordTVMod"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="32"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/seekBarTVMod"/>

            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="4"
                    android:id="@+id/seekBarsizeMod"/>
        </LinearLayout>


        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_numeric"
                android:id="@+id/checkBoxNumeriqueMod"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_minuscule"
                android:id="@+id/checkBoxMinusculeMod"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_majuscule"
                android:id="@+id/checkBoxMajusculeMod"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_special"
                android:id="@+id/checkBoSpecMod"/>

    </LinearLayout>


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_modify"
            android:id="@+id/BTModify"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
