<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="fr.beber.generatormdp.CreateUserActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/edittext_username"
                android:maxLines="1"
                android:inputType="textCapWords"
                android:singleLine="true"
                android:id="@+id/ETCreateNickname"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/edittext_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:capitalize="none"
                android:singleLine="true"
                android:id="@+id/ETCreateEmail"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/edittext_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/ETCreatePassword"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/edittext_confirm_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/ETCreateConfirmPassword"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_validate"
                android:id="@+id/BTValidateUser"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>
